{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 159,
  "lineage": "d3352a48-fb97-f8a7-b9cb-ce37b81c7388",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:408685395526:instance/i-0ee2bb2b32c55ed0a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ee2bb2b32c55ed0a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-010dff7b0ea9a4a32",
            "private_dns": "ip-10-0-0-185.eu-west-2.compute.internal",
            "private_ip": "10.0.0.185",
            "public_ip": "35.178.225.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-05d730cf8b44cd4bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db8e527a2bb7eaf1",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081a160f0960aac71"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:408685395526:instance/i-0ba8cb23953784f22",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ba8cb23953784f22",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5c62a93b2dac091",
            "private_dns": "ip-10-0-0-78.eu-west-2.compute.internal",
            "private_ip": "10.0.0.78",
            "public_ip": "35.178.206.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0a9ad44bef060db85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db8e527a2bb7eaf1",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081a160f0960aac71"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:408685395526:instance/i-0bf0409e75110bf7a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0bf0409e75110bf7a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-017f0ecd30cb14ea8",
            "private_dns": "ip-10-0-0-131.eu-west-2.compute.internal",
            "private_ip": "10.0.0.131",
            "public_ip": "3.8.93.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0cb788dfc4ae90771",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db8e527a2bb7eaf1",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081a160f0960aac71"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05f5d13853de7a220",
            "owner_id": "408685395526",
            "vpc_id": "vpc-000598fbcad589fc4"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a4625fbc6853ccb",
            "original_route_table_id": "rtb-0b025c0506515a697",
            "route_table_id": "rtb-07cd10427192ea221",
            "vpc_id": "vpc-000598fbcad589fc4"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07cd10427192ea221",
            "owner_id": "408685395526",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f5d13853de7a220",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-000598fbcad589fc4"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:408685395526:security-group/sg-081a160f0960aac71",
            "description": "Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081a160f0960aac71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-security-group",
            "name_prefix": null,
            "owner_id": "408685395526",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-000598fbcad589fc4"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:408685395526:subnet/subnet-0db8e527a2bb7eaf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0db8e527a2bb7eaf1",
            "map_public_ip_on_launch": false,
            "owner_id": "408685395526",
            "vpc_id": "vpc-000598fbcad589fc4"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:408685395526:vpc/vpc-000598fbcad589fc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2c24c3ed2ab0b61",
            "default_route_table_id": "rtb-0b025c0506515a697",
            "default_security_group_id": "sg-00aa441b6b4f4507e",
            "dhcp_options_id": "dopt-c77037af",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-000598fbcad589fc4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b025c0506515a697",
            "owner_id": "408685395526"
          }
        }
      ]
    }
  ]
}